overflow fix

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -62,7 +62,7 @@
 
 .catalog li {
   position: relative;
-  min-height: 386px;
+  max-height: 386px;
 
   @media (max-width: $vp-1023) {
     width: 309px;
@@ -161,7 +161,9 @@
 
 .catalog__block--information {
   position: relative;
+  max-height: 100%;
   transform: rotateY(180deg);
+  overflow-y: auto;
 
   @include flex;
   align-items: flex-start;
