--- a/source/sass/blocks/reservation.scss
+++ b/source/sass/blocks/reservation.scss
@@ -32,6 +32,7 @@
 }
 
 .reservation h2 {
+  max-width: 500px;
   margin: 0;
   margin-bottom: 5px;
   padding-top: 164px;
