--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,7 @@
 .social {
   display: flex;
   justify-content: flex-end;
+  align-self: flex-start;
   flex-grow: 1;
 
   @media (max-width: $vp-1023) {
